  * introduced SuperUser
    - allowed SuperUser to create project where it is automatically set as Project Manager.
  * improved authorization checks to several APIs
  * improved messaging in the update routines
  * added support in Sheet2RDF for single tables in MySQL, MariaDB and PostgreSQL
  * added the possibility to create downloads of the main graph
  * updated dependency on CODA 1.7.5-SNAPSHOT
  * updated dependency on MAPLE 0.0.11-SNAPSHOT
  * updated dependency on Sheet2RDF 5.0.0-SNAPSHOT (to manage DB tables)
  * updated various dependencies

version 10.2.1
date: 07/02/2022
  * better semantic checks for the Manchester expressions, with the possibility to disable such checks
  * added the possibility to avoid semantic checks when creating/updating triples from a Manchester expression
  * replaced usage of users' email in favour of IRIs in system settings
  * fixed several bugs in Global Search (number of returned results, better checks on the creation of the indexes for SKOSXL projects, creting the indexes for OWL projects, deletion of indexes for a specific project)
  * fixed the use of Lucene FTS index in "GraphDB SE" projects during searches

version 10.2
date: 26/01/2022
  * Better performances in getTopConcepts and getNarrowerConcepts, thanks to Saku Seppälä for the contribution!
  * Added localization for Spanish, thanks to Juan Antonio Pastor Sánchez for the contribution!
  * GraphDB-powered indexed search with GraphDB v9.9.0+ now requires adding the lucene-fts-plugin folder and wars to  GraphDB's plugin folder (ST will check that the plugin is installed when performing search)
  * Resolved disconnecting issues with SAML authentication: added a configuration setting for ignoring the expiration of the SAML assertion.
  * fixed a bug in the search on a GraphDB containing an Apostrophe or a \
  * fixed a bug in GlobalSearch about concurrent write access to the indexes
  * fixed a bug in the service that lists EDOAL correspondences