@@ -7,6 +7,8 @@ date: dd/mm/yyyy
   * improved messaging in the update routines
   * added support in Sheet2RDF for single tables in MySQL, MariaDB and PostgreSQL
   * added the possibility to create downloads of the main graph
+  * added a service to suggest SPARQL endpoints for federation (by searching matching repositories hosted on the same
+    GraphDB server than the contextual project)
   * updated dependency on CODA 1.7.5-SNAPSHOT
   * updated dependency on MAPLE 0.0.11-SNAPSHOT
   * updated dependency on Sheet2RDF 5.0.0-SNAPSHOT (to manage DB tables)
